[package]
name = "rig1"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
dotenv = "0.15.0"
rig-core = "0.6.1"
tokio = { version = "1.43.0", features = ["full"] }
tempfile = "3"
rig-qdrant = "0.1.5"
qdrant-client = "1.13.0"
serde_json = "1.0.137"

[dependencies.uuid]
version = "1.12.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
